# voice-to-slide

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_EDITING.md  README.md  README_UPDATE_SUMMARY.md  SKILL_SETUP.md  WEB_UI_README.md  WORKFLOW.md  check-services.sh  docker-compose.prod.yml  docker-compose.yml  fixed.breakdown.json  main.py  prd.md  pyproject.toml  test.breakdown.json  test.debug.json
api/: Dockerfile  Dockerfile.playwright  celery_config.py  database.py  init_db.py  main.py
api/middleware/: rate_limiter.py
api/models/: __init__.py  job.py  rate_limit.py
api/routers/: config.py  download.py  generate.py  jobs.py
api/schemas/: job_schema.py
api/services/: job_service.py
api/tasks/: __init__.py  generation_tasks.py
api/websocket/: progress_handler.py
demo/: demo_01.pptx
docs/: README.md
docs/development/: QUICK_START.md  SUCCESS_REPORT.md  SUMMARY.md  WEB_UI_DESIGN_PLAN.md
frontend/: Dockerfile.prod  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AudioRecorder.tsx
skills/pptx-enhanced/: SKILL.md
src/voice_to_slide/: __init__.py  content_generator.py  content_summarizer.py  html_generator.py  html_to_image.py  html_to_pptx.py  html_to_pptx_old.py  image_fetcher.py  main.py  presentation_analyzer.py  presentation_generator.py  presentation_orchestrator.py  slide_builder.py  structure_editor.py  themes.md  transcriber.py  utils.py
workspace/: structure.json
(+8 files in other folders)
