[project]
name = "voice-to-slide"
version = "0.1.0"
description = "Voice-to-slide application that converts voice recordings into personalized slide presentations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "soniox>=1.9.0",
    "anthropic>=0.40.0",
    "python-pptx>=1.0.2",
    "requests>=2.32.0",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
    "pillow>=11.0.0",
]

[project.scripts]
voice-to-slide = "voice_to_slide.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
