[project]
name = "voice-to-slide"
version = "0.1.0"
description = "Voice-to-slide application that converts voice recordings into personalized slide presentations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "soniox>=1.9.0",
    "anthropic>=0.40.0",
    "python-pptx>=1.0.2",
    "requests>=2.32.0",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
    "pillow>=11.0.0",
    "claude-agent-sdk>=0.1.4",
    "playwright>=1.55.0",
    # Web API dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "celery>=5.3.4",
    "redis>=5.0.1",
]

[project.scripts]
voice-to-slide = "voice_to_slide.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_to_slide"]
